<resources>
    <string name="app_name">Pertemuan2_LinearLayout</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="masukkan_berat_badan">Masukkan Berat Badan (Kg)</string>
    <string name="masukkan_tinggi_badan">Masukkan Tinggi Badan (Cm)</string>
    <string name="keterangan">Keterangan</string>
    <string name="toast">TOAST</string>
    <string name="count">COUNT</string>
    <string name="count0">0</string>
</resources>
