<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BmiActivity"
    android:orientation="vertical"
    android:paddingVertical="60dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="45sp"
        android:text="@string/bmi_calculator"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berat_badan"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="10dp">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/masukkan_berat_badan"
            android:id="@+id/berat_badan"
            android:background="@drawable/border">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi_badan"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="26dp"
            android:layout_marginBottom="10dp">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="numberDecimal"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/masukkan_tinggi_badan"
            android:id="@+id/tinggi_badan"
            android:background="@drawable/border">
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toast"
                android:layout_weight="1"
                android:id="@+id/btn_toast"
                android:layout_marginHorizontal="16dp"
                >
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:layout_weight="1"
                android:id="@+id/btn_count"
                android:layout_marginHorizontal="16dp">
            </Button>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="100sp"
            android:id="@+id/hasil"
            android:text="@string/count0"
            android:textAlignment="center"
            android:layout_marginVertical="16dp">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewKeterangan"
            android:textSize="25sp"
            android:textAlignment="center"
            android:layout_marginVertical="16dp">
        </TextView>

    </LinearLayout>

</LinearLayout>